[IMP] better display and group_by
bzr revid: mat@openerp.com-20130307111614-zfbem9daqxmi0vdx

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -8,3 +8,9 @@
   background-color: #ffc7c7;
   color: #7a3737;
 }
+.openerp .oe_kanban_view .oe_kanban_card.oe_kanban_color_draft,
+.openerp .oe_kanban_view .oe_kanban_card.oe_kanban_color_canceled {
+  background-color: #E6E6E6;
+  color: #585858;
+  font-size: 0.9em;
+}
