[IMP] survey: security, access and add groups
bzr revid: chm@openerp.com-20130308141320-l685imws9n6gon1n

--- a/addons/survey/wizard/survey_print_answer.xml
+++ b/addons/survey/wizard/survey_print_answer.xml
@@ -39,10 +39,10 @@
         </record>
 
         <menuitem name="Surveys Answers" action="action_view_survey_print_answer" id="menu_print_survey_answer"
-            parent="base.next_id_10" icon="STOCK_PRINT" groups="base.group_tool_manager"/>
+            parent="base.next_id_10" icon="STOCK_PRINT" groups="base.group_survey_manager"/>
 
         <menuitem name="Surveys All Responses" action="action_view_survey_print_answer" id="menu_print_survey_answer"
-            parent="menu_surveys_configuration" groups="base.group_tool_manager" sequence="2"/>
+            parent="menu_surveys_configuration" sequence="2"/>
 
     </data>
 </openerp>
