--- a/addons/survey/wizard/survey_print_statistics.xml
+++ b/addons/survey/wizard/survey_print_statistics.xml
@@ -31,10 +31,10 @@
         </record>
 
         <menuitem name="Surveys Statistics" action="action_view_survey_print_statistics" id="menu_print_survey_statistics"
-            parent="base.next_id_10" icon="STOCK_PRINT" groups="base.group_tool_manager"/>
+            parent="base.next_id_10" icon="STOCK_PRINT" groups="base.group_survey_manager"/>
 
         <menuitem name="Surveys Statistics" action="action_view_survey_print_statistics" id="menu_survey_print_survey_statistics"
-            parent="menu_surveys_configuration" groups="base.group_tool_manager" sequence="3"/>
+            parent="menu_surveys_configuration" sequence="3"/>
 
     </data>
 </openerp>
