--- a/addons/survey/static/src/css/survey.css
+++ b/addons/survey/static/src/css/survey.css
@@ -85,9 +85,8 @@
     font-weight: bold;
     padding-right: 8px;
 }
-
-.openerp .oe_form .oe_survey_answer .oe_survey_matrix_of_choices_only_one_ans label,
-.openerp .oe_form .oe_survey_answer .matrix_of_choices_only_multi_ans label {
+.openerp .oe_form .oe_survey_answer .oe_form_sheet .oe_survey_matrix_of_choices_only_one_ans label,
+.openerp .oe_form .oe_survey_answer .oe_form_sheet .oe_survey_multiple_choice_multiple_ans label {
     min-width: 240px;
 }
 .openerp .oe_popup_form .oe_form_sheet.oe_survey {
