--- a/addons/survey/wizard/survey_print.xml
+++ b/addons/survey/wizard/survey_print.xml
@@ -39,7 +39,7 @@
 
         <menuitem name="Print Surveys" id="menu_print_survey_form" sequence="1"
             action="action_view_survey_print" parent="base.next_id_10"
-            groups="base.group_tool_manager" icon="STOCK_PRINT"/>
+            groups="base.group_survey_manager" icon="STOCK_PRINT"/>
 
     </data>
 </openerp>
