[IMP] mail, email_template: improved mass mailing action (renamed, now using a well defined template) + improved form view of mail.compose.message wizard.
bzr revid: tde@openerp.com-20130312133817-y9xztv6gs4ut7ndj

--- a/addons/email_template/wizard/mail_compose_message_view.xml
+++ b/addons/email_template/wizard/mail_compose_message_view.xml
@@ -8,9 +8,12 @@
             <field name="inherit_id" ref="mail.email_compose_message_wizard_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='subject']" position="after">
-                    <field name="partner_to" groups="base.group_no_one"/>
-                    <field name="email_to" groups="base.group_no_one"/>
-                    <field name="email_cc" groups="base.group_no_one"/>
+                    <field name="partner_to" groups="base.group_no_one"
+                        attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>/>
+                    <field name="email_to" groups="base.group_no_one"
+                        attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>/>
+                    <field name="email_cc" groups="base.group_no_one"
+                        attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>/>
                 </xpath>
                 <xpath expr="//footer" position="inside">
                     <group class="oe_right" col="1">
