--- a/addons/mail/wizard/mail_compose_message_view.xml
+++ b/addons/mail/wizard/mail_compose_message_view.xml
@@ -16,12 +16,14 @@
                         <field name="email_from"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="subject" placeholder="Subject..." required="True"/>
-                        <field name="post"  groups="base.group_no_one"/>
+                        <field name="post"  groups="base.group_no_one"
+                            attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="notify"  groups="base.group_no_one"
-                            attrs="{'invisible':[('post', '!=', True)]}"/>
-                        <field name="same_thread"/>
+                            attrs="{'invisible':['|', ('post', '!=', True), ('composition_mode', '!=', 'mass_mail')]}"/>
+                        <field name="same_thread"
+                            attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="reply_to" placeholder="Email address te redirect replies..."
-                            attrs="{'invisible':[('same_thread', '=', True)],
+                            attrs="{'invisible':['|', ('same_thread', '=', True), ('composition_mode', '!=', 'mass_mail')],
                                     'required':[('same_thread', '!=', True)]}"/>
                         <label for="partner_ids" string="Recipients"
                             attrs="{'invisible':[('composition_mode', '=', 'mass_mail')]}"/>
@@ -58,7 +60,7 @@
         </record>
 
         <!--  Replace the default mass-mailing wizard in base with the composition wizard -->
-        <act_window name="Mass Mailing"
+        <act_window name="Partner Mass Mailing"
                 res_model="mail.compose.message"
                 src_model="res.partner"
                 view_mode="form"
@@ -70,5 +72,6 @@
                             'default_composition_mode': 'mass_mail',
                             'default_partner_to': '${object.id or \'\'}',
                         }"/>
+
     </data>
 </openerp>
