[IMP] survey: add test mode
bzr revid: chm@openerp.com-20130314110615-qsacnvwhoedt6jt3

--- a/addons/survey/static/src/css/survey.css
+++ b/addons/survey/static/src/css/survey.css
@@ -30,6 +30,9 @@
 .openerp .oe_kanban_survey .oe_kanban_status_red {
     background-color: red;
 }
+.openerp .oe_kanban_survey .oe_inactive {
+    color: #aaaaaa;
+}
 
 .openerp .oe_survey_date_deadline {
     white-space: nowrap; 
