--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -550,8 +550,9 @@
     padding: 2px 8px;
     font-size: 12px;
     text-shadow: none;
-    width: 100%
+    width: 100%;
 }
+.openerp .oe_followers button.oe_invite,
 .openerp .oe_followers button.oe_follower.oe_following{
     color: white;
     background-color: #3465A4;
