[IMP] mail_compose_message: some fields back to visible.
bzr revid: tde@openerp.com-20130319093844-82c95hmwznaprp6t

--- a/addons/mail/wizard/mail_compose_message_view.xml
+++ b/addons/mail/wizard/mail_compose_message_view.xml
@@ -16,9 +16,9 @@
                         <field name="email_from"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="subject" placeholder="Subject..." required="True"/>
-                        <field name="post"  groups="base.group_no_one"
+                        <field name="post"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
-                        <field name="notify"  groups="base.group_no_one"
+                        <field name="notify"
                             attrs="{'invisible':['|', ('post', '!=', True), ('composition_mode', '!=', 'mass_mail')]}"/>
                         <field name="same_thread"
                             attrs="{'invisible':[('composition_mode', '!=', 'mass_mail')]}"/>
