--- a/addons/survey/wizard/survey_answer.xml
+++ b/addons/survey/wizard/survey_answer.xml
@@ -9,8 +9,26 @@
             <field name="name">Survey Answer</field>
             <field name="model">survey.question.wiz</field>
             <field name="arch" type="xml">
-                <form string="Your Messages"  version="7.0">
-                    <field name="name" nolabel="1" colspan="4" />
+                <form string="Your Survey"  version="7.0">
+                    <field name="name" nolabel="1" colspan="4" invisible="1"/>
+                    <sheet>
+                        <div>
+                            <br/><br/>
+                            <h2>Thanks for completing this survey.</h2>
+                        </div>
+                        <div groups="portal.group_anonymous">
+                            <h2>Now join OpenERP to facilitate your professional life.</h2>
+                            <ul style="margin-top: 26px;">
+                                <li>Surveys</li>
+                                <li>Accounting</li>
+                                <li>CRM and Marketing</li>
+                                <li>Project Managment</li>
+                                <li>...</li>
+                            </ul>
+                            <div style="margin-bottom: 20px;margin-top: 30px;font-weight: bold;">Register with OpenERP today!</div>
+                            <a href="https://accounts.openerp.com/" class="oe_survey_button">Sign Up FREE</a>
+                        </div>
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -19,7 +37,7 @@
             <field name="name">Survey Search</field>
             <field name="model">survey.question.wiz</field>
             <field name="arch" type="xml">
-                <search string="Your Messages">
+                <search string="Your survey">
                     <field name="name"/>
                 </search>
             </field>
@@ -40,53 +58,6 @@
             <field name="model_id" ref="model_survey_question_wiz"/>
             <field name="code">action = self._action_filling(cr, uid, None, context)</field>
             <field name="condition">True</field>
-        </record>
-
-        <!--
-            Survey Question Wizard - Complete survey
-         -->
-
-        <record id="view_survey_complete_survey" model="ir.ui.view">           
-            <field name="name">Complete Survey Answer</field>
-            <field name="model">survey.name.wiz</field>
-            <field name="priority">10</field>
-            <field name="arch" type="xml">
-                <form string="Your Messages"  version="7.0">
-                    <sheet>
-                        <div>
-                            <br/><br/>
-                            <h2>Thanks for completing this survey.</h2>
-                            <br/><br/>
-                        </div>
-                    </sheet>
-                </form>
-            </field>
-        </record>
-
-        <record id="view_survey_complete_survey_external" model="ir.ui.view">           
-            <field name="name">Complete Survey Answer</field>
-            <field name="model">survey.name.wiz</field>
-            <field name="priority">11</field>
-            <field name="arch" type="xml">
-                <form string="Your Messages"  version="7.0">
-                    <sheet>
-                        <div>
-                            <br/><br/>
-                            <h2>Thanks for completing this survey.</h2>
-                            <h2>Now join OpenERP to facilitate your professional life.</h2>
-                            <ul style="margin-top: 26px;">
-                                <li>Surveys</li>
-                                <li>Accounting</li>
-                                <li>CRM and Marketing</li>
-                                <li>Project Managment</li>
-                                <li>...</li>
-                            </ul>
-                            <div style="margin-bottom: 20px;margin-top: 30px;font-weight: bold;">Register with OpenERP today!</div>
-                            <a href="https://accounts.openerp.com/" class="oe_survey_button">Sign Up FREE</a>
-                        </div>
-                    </sheet>
-                </form>
-            </field>
         </record>
 
     </data>
