[IMP] better display of kanban
bzr revid: mat@openerp.com-20130320100016-kuc3y18d9qrlv3di

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -1,4 +1,5 @@
-.oe_kanban_goal {
+.openerp .oe_notebook_page .oe_kanban_view .oe_kanban_card.oe_kanban_goal {
+  width: 190px;
 }
 .openerp .oe_kanban_view .oe_kanban_card.oe_kanban_color_reached {
   background-color: #A1FF81;
