[ADD] basic widget for goal list
bzr revid: mat@openerp.com-20130321110152-0wa9b3uuyk2qvk0d

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -1,3 +1,4 @@
+/* Kanban views */
 .openerp .oe_notebook_page .oe_kanban_view .oe_kanban_card.oe_kanban_goal {
   width: 190px;
 }
@@ -14,4 +15,22 @@
   background-color: #E6E6E6;
   color: #585858;
   font-size: 0.9em;
+}
+
+
+/* Mail Sidebar */
+/*.openerp .oe_mail_wall {
+    column-count: 3;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+}*/
+
+.openerp .oe_mail_wall .oe_user_sidebar {
+    margin-left: 20px;
+    position: relative;
+    display: inline-block;
+    width: 200px;
+}
+.openerp .oe_mail_wall .oe_mail {
+    display: inline-block;
 }
