[IMP] Added css for the ' Close(X)' icon of the dialog box when the title size increases than overlap the title.
bzr revid: psa@tinyerp.com-20130322091026-m0eqoqnt1t2p184v

--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -646,7 +646,9 @@
     width: 10px !important;
     height: 12px !important;
 }
-
+.openerp.ui-dialog .ui-dialog-titlebar .ui-dialog-title{
+    padding-right: 20px;
+}
 .openerp .oe_followers .oe_show_more{
     cursor: pointer;
 }
