[IMP] update button with refresh
bzr revid: mat@openerp.com-20130322111344-7qs3o2tvbx7h4qln

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -31,7 +31,7 @@
     position: relative;
     display: inline-block;
     vertical-align: top;
-    width: 220px;
+    width: 250px;
 }
 .openerp .oe_user_sidebar .oe_gamification_goal {
     background: #EDEDF6;
@@ -57,11 +57,17 @@
 .openerp .oe_mail_wall .oe_user_sidebar ul {
     list-style-type: none; 
     padding-left: 20px;
+    margin-bottom: 10px;
 }
-
+.openerp .oe_mail_wall .oe_user_sidebar li {
+    margin-bottom: 10px;
+}
 .openerp .oe_mail_wall .oe_user_sidebar li progress {
     width: 80%;
     display: inline-block;
+}
+.openerp .oe_mail_wall .oe_user_sidebar li p {
+    margin:5px 0;
 }
 .openerp .oe_mail_wall .oe_mail {
     display: inline-block;
