[IMP] css width for kanban badge
bzr revid: mat@openerp.com-20130322154130-nmudmkp5vskcgxol

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -1,6 +1,7 @@
 /* Kanban views */
-.openerp .oe_notebook_page .oe_kanban_view .oe_kanban_card.oe_kanban_goal {
-  width: 190px;
+.openerp .oe_notebook_page .oe_kanban_view .oe_kanban_card.oe_kanban_goal,
+.openerp .oe_kanban_view .oe_kanban_card.oe_kanban_badge {
+  width: 220px;
 }
 .openerp .oe_kanban_view .oe_kanban_card.oe_kanban_color_reached {
   background-color: #A1FF81;
