--- a/addons/crm/static/src/css/crm.css
+++ b/addons/crm/static/src/css/crm.css
@@ -53,3 +53,6 @@
 .openerp .oe_kanban_view .oe_kanban_crm_salesteams .oe_center .oe_subsum {
     font-size: 10px;
 }
+.openerp .oe_form_editable .oe_form .oe_read_only {
+    display: none;
+}
