[IMP] use board view for sidebar
bzr revid: mat@openerp.com-20130325153953-zch12sfx62s5i6xc

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -58,6 +58,13 @@
 .openerp .oe_mail_wall .oe_mail_wall_aside li {
     margin-bottom: 15px;
 }
+.openerp .oe_mail_wall .oe_mail_wall_aside table {
+  margin: 10px 0;
+}
+.openerp .oe_mail_wall .oe_mail_wall_aside table progress {
+  width: 100%;
+  display: inline-block;
+}
 .openerp .oe_mail_wall .oe_mail_wall_aside li progress {
     width: 80%;
     display: inline-block;
