[IMP] refresh button for plan
bzr revid: mat@openerp.com-20130325161527-qes3lqpzevdmdsx6

--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -72,6 +72,10 @@
 .openerp .oe_mail_wall .oe_mail_wall_aside li p {
     margin:5px 0;
 }
+.openerp .oe_mail_wall .oe_mail_wall_aside .oe_update_plan {
+  display: inline-block;
+  float: right;
+}
 .openerp .oe_mail_wall .oe_mail {
     display: inline-block;
 }
