--- a/addons/crm/report/crm_phonecall_report_view.xml
+++ b/addons/crm/report/crm_phonecall_report_view.xml
@@ -11,7 +11,7 @@
                 <tree string="Phone calls" create="false">
                     <field name="name" invisible="1"/>
                     <field name="month" invisible="1"/>
-                    <field name="section_id" invisible="1"/>
+                    <field name="section_id" invisible="1" groups="base.group_multi_salesteams"/>
                     <field name="priority" invisible="1"/>
                     <field name="user_id" invisible="1"/>
                     <field name="company_id" invisible="1"/>
@@ -59,7 +59,7 @@
                             help="Phone calls that are assigned to one of the sale teams I manage"/>
                     <separator/>
                     <filter icon="terp-personal" string="My Phone Calls" help="Phone Calls that are assigned to me" domain="[('user_id','=',uid)]" />
-                    <field name="section_id" string="Sales Team" context="{'invisible_section': False}"/>
+                    <field name="section_id" string="Sales Team" context="{'invisible_section': False}" groups="base.group_multi_salesteams"/>
                     <field name="user_id" string="Salesperson"/>
                     <group expand="0" string="Extended Filters...">
                         <field name="partner_id"/>
