--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -61,6 +61,18 @@
 .openerp .oe_mail_wall .oe_mail_wall_aside table {
     margin: 10px 0;
 }
+.oe_mail_wall_aside .oe_list_content tbody tr:nth-child(even) {
+    background-color: #fff;
+}
+.openerp .oe_mail_wall .oe_mail_wall_aside table td,th {
+    vertical-align: center;
+    border: none;
+}
+.openerp .oe_mail_wall .oe_mail_wall_aside table td.col1 { width: 25%; }
+.openerp .oe_mail_wall .oe_mail_wall_aside table td.col2 { width: 20%; }
+.openerp .oe_mail_wall .oe_mail_wall_aside table td.col3 { width: 45%; }
+/* ... and 10% left for ranking */
+
 .openerp .oe_mail_wall .oe_mail_wall_aside table progress {
     width: 100%;
     display: inline-block;
