--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -624,6 +624,7 @@
 }
 .openerp .oe_followers .oe_partner {
     height: 32px;
+    margin-right: 8px;
     overflow: hidden;
     white-space: nowrap;
 }
