[IMP] survey: get responses on kanban
bzr revid: chm@openerp.com-20130328112521-g9bttrqs6n6x1n2w

--- a/addons/survey/static/src/css/survey.css
+++ b/addons/survey/static/src/css/survey.css
@@ -10,6 +10,12 @@
 
 }
 
+.openerp .oe_kanban_survey {
+    width: 220px;
+}
+.openerp .oe_kanban_survey .oe_kanban_survey_list{
+    width: 100%;
+}
 .openerp .oe_kanban_survey .oe_kanban_status,
 .openerp .oe_kanban_survey .oe_kanban_status_green,
 .openerp .oe_kanban_survey .oe_kanban_status_darkgreen,
