--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -627,6 +627,7 @@
     margin-right: 8px;
     overflow: hidden;
     white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .openerp .oe_followers .oe_partner img{
     width: 32px;
