--- a/addons/web_shortcuts/static/src/css/web_shortcuts.css
+++ b/addons/web_shortcuts/static/src/css/web_shortcuts.css
@@ -54,6 +54,7 @@
     border-left: none;
     padding-left: 0;
 }
-.openerp .oe_dropdown_menu > li > a:hover{
-    overflow: visible;
+.oe_systray_shortcuts_items > li > a:hover {
+    overflow:visible;
+    white-space: normal;
 }
