--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -73,11 +73,11 @@
 .openerp .oe_mail_wall .oe_mail_wall_aside table td.col3 { width: 45%; }
 /* ... and 10% left for ranking */
 
-.openerp .oe_mail_wall .oe_mail_wall_aside table progress {
+.openerp .oe_mail_wall .oe_mail_wall_aside table progress,.oe_form_field_progressbar {
     width: 100%;
     display: inline-block;
 }
-.openerp .oe_mail_wall .oe_mail_wall_aside li progress {
+.openerp .oe_mail_wall .oe_mail_wall_aside li progress,.oe_form_field_progressbar {
     width: 80%;
     display: inline-block;
 }
