--- a/addons/gamification/static/src/css/goal.css
+++ b/addons/gamification/static/src/css/goal.css
@@ -19,6 +19,16 @@
 }
 
 
+.oe_kanban_badge_avatars img {
+    width: 30px;
+    height: 30px;
+    padding-left: 0;
+    margin-top: 3px;
+    border-radius: 2px;
+    -box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+
 /* Mail Sidebar */
 
 .openerp .oe_mail_wall .oe_mail_wall_aside {
