[IMP] CSS tweaks
bzr revid: mat@openerp.com-20130403091244-l3snsoja4t8c41q6

--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -22,7 +22,7 @@
     width: 32px;
     height: 32px;
     padding: 0px;
-    margin: 0px
+    margin: 0px;
     border-radius: 0px;
 }
 
@@ -688,20 +688,18 @@
     border-radius: 2px;
     padding: 10px;
 }
-.openerp .oe_mail_wall_aside .oe_user_display {
+.openerp .oe_mail_wall_aside .oe_suggestion_display {
     font-size: 14px;
     font-weight: bold;
     margin-left: 10px;
-    color: #7C7BAD;
 }
 .openerp .oe_mail_wall_aside .oe_suggested_groups {
     border-radius: 2px;
     width: 100%;
     margin-left: 10px;
-    height: 90px;
+    min-height: 70px;  /* image_small 66x66px */
 }
 .openerp .oe_mail_wall_aside .oe_group_images {
-    width: 20%;
     float: left;
     padding-right: 20px;
 }
