[ADD] suggestions for employees to follow
bzr revid: mat@openerp.com-20130403142716-lmsz9hwkg7tathly

--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -693,39 +693,36 @@
     font-weight: bold;
     margin-left: 10px;
 }
-.openerp .oe_mail_wall_aside .oe_suggested_groups {
+.openerp .oe_mail_wall_aside .oe_suggested_item {
     border-radius: 2px;
     width: 100%;
     margin-left: 10px;
     min-height: 70px;  /* image_small 66x66px */
 }
-.openerp .oe_mail_wall_aside .oe_group_images {
+.openerp .oe_mail_wall_aside .oe_item_image {
     float: left;
     padding-right: 20px;
 }
-.openerp .oe_mail_wall_aside .oe_group_image_content {
+.openerp .oe_mail_wall_aside .oe_item_image_content {
     border-radius: 2px;
     border: solid 1px rgba(0,0,0,0.03);
 }
-.openerp .oe_mail_wall_aside .oe_join_group {
+.openerp .oe_mail_wall_aside .oe_suggestion_action {
     margin-top: 10px;
 }
-.openerp .oe_mail_wall_aside .oe_follow_people {
-    margin-top: 10px;
-}
-.openerp .oe_mail_wall_aside .oe_remove_suggested_group {
+.openerp .oe_mail_wall_aside .oe_remove_suggested_item {
     visibility:hidden;
     width:3%;
     float:right;
     margin-right:20px;
 }
-.openerp .oe_mail_wall_aside .oe_suggested_groups:hover .oe_remove_suggested_group > span {
+.openerp .oe_mail_wall_aside .oe_suggested_item:hover .oe_remove_suggested_item > span {
     visibility: visible;
 }
-.openerp .oe_mail_wall_aside .oe_suggest_groups .oe_group {
+.openerp .oe_mail_wall_aside .oe_item {
     width: 90%;
 }
-.openerp .oe_mail_wall_aside .oe_suggest_groups .oe_group .oe_group_name {
+.openerp .oe_mail_wall_aside .oe_item .oe_item_name {
     text-overflow: ellipsis;
     overflow: hidden;
     width: 90%;
